Update and refactor ModbusTCPVehicleCommAdapter class
This commit updates several areas of the ModbusTCPVehicleCommAdapter. It removes unused variables and imports, reformats logging messages, and refactors methods to improve clarity. Additionally, it changes the way stationCommandsMap keys are stored - formerly by station name, now by a station's position. The main focus is on optimizing and tidying up the code, improving its readability and performance.